<resources>
    <string name="app_name">Calculator App</string>
    <string name="CalcNum"></string>
    <string name="Seven">7</string>
    <string name="Divide">/</string>
    <string name="Nine">9</string>
    <string name="Eigth">8</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Multi">*</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Plus">+</string>
    <string name="Zero">0</string>
    <string name="Minus">-</string>
    <string name="Eqaul">=</string>
    <string name="Dot">.</string>
    <string name="Modulo">Bck</string>
    <string name="ClearAll">CLR</string>
</resources>