<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:textSize="45sp"
        android:text="@string/CalcNum"
        android:background="@color/lightBlue"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnClearAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:onClick="btnClear"
            android:background = "@drawable/roundedbutton"
            tools:ignore="UsingOnClickInXml"
            android:layout_weight="3"
            android:text="@string/ClearAll"
            android:textSize="20dp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/btnModulo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:onClick="btnClicked"
            android:background = "@drawable/roundedbutton"
            android:layout_weight="1"
            android:text="@string/Modulo"
            tools:ignore="UsingOnClickInXml"
            android:textSize="20dp"
            android:textStyle="normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:onClick="btnClicked"
            android:background = "@drawable/roundedbutton"
            android:layout_weight="1"
            android:textSize="22dp"
            android:textStyle="normal"
            android:text="@string/Seven"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="22dp"
            android:textStyle="normal"
            android:background = "@drawable/roundedbutton"
            android:onClick="btnClicked"
            tools:ignore="UsingOnClickInXml"
            android:layout_weight="1"
            android:text="@string/Eigth"/>

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:onClick="btnClicked"
            android:text="@string/Nine"
            android:textSize="22dp"
            android:textStyle="normal"
            tools:ignore="UsingOnClickInXml,TextContrastCheck" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:background = "@drawable/roundedbutton"
            android:onClick="btnClicked"
            tools:ignore="UsingOnClickInXml"
            android:layout_weight="1"
            android:text="@string/Divide"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="22dp"
            android:textStyle="normal"
            android:onClick="btnClicked"
            android:background = "@drawable/roundedbutton"
            android:layout_weight="1"
            android:text="@string/Four"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="22dp"
            android:textStyle="normal"
            android:onClick="btnClicked"
            android:background = "@drawable/roundedbutton"
            tools:ignore="UsingOnClickInXml"
            android:layout_weight="1"
            android:text="@string/Five"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="22dp"
            android:textStyle="normal"
            android:onClick="btnClicked"
            android:background = "@drawable/roundedbutton"
            tools:ignore="UsingOnClickInXml"
            android:layout_weight="1"
            android:text="@string/Six"/>

        <Button
            android:id="@+id/btnMul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:background = "@drawable/roundedbutton"
            android:onClick="btnClicked"
            tools:ignore="UsingOnClickInXml"
            android:layout_weight="1"
            android:text="@string/Multi"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="22dp"
            android:textStyle="normal"
            android:onClick="btnClicked"
            android:background = "@drawable/roundedbutton"
            android:layout_weight="1"
            android:text="@string/One"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="22dp"
            android:textStyle="normal"
            android:onClick="btnClicked"
            android:background = "@drawable/roundedbutton"
            tools:ignore="UsingOnClickInXml"
            android:layout_weight="1"
            android:text="@string/Two"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="22dp"
            android:textStyle="normal"
            android:onClick="btnClicked"
            android:background = "@drawable/roundedbutton"
            tools:ignore="UsingOnClickInXml"
            android:layout_weight="1"
            android:text="@string/Three"/>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:background = "@drawable/roundedbutton"
            android:onClick="btnClicked"
            tools:ignore="UsingOnClickInXml"
            android:layout_weight="1"
            android:text="@string/Plus"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="22dp"
            android:textStyle="normal"
            android:onClick="btnClicked"
            android:background = "@drawable/roundedbutton"
            android:layout_weight="1"
            android:text="@string/Zero"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="22dp"
            android:textStyle="normal"
            android:onClick="dotOperator"
            android:background = "@drawable/roundedbutton"
            android:layout_weight="1"
            android:text="@string/Dot"
            tools:ignore="UsingOnClickInXml" />


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:background = "@drawable/roundedbutton"
            android:onClick="btnClicked"
            tools:ignore="UsingOnClickInXml"
            android:layout_weight="1"
            android:text="@string/Eqaul"/>

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:background = "@drawable/roundedbutton"
            android:onClick="btnClicked"
            tools:ignore="UsingOnClickInXml"
            android:layout_weight="1"
            android:text="@string/Minus"/>
    </LinearLayout>


</LinearLayout>